--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
   ci:
     name: CI
-    instance_type: mac_mini
+    instance_type: mac_mini_m1
     # Setting the timeout for a build to 15 minutes.
     max_build_duration: 15
     environment:
