--- a/apps/ednet_one/pubspec.yaml
+++ b/apps/ednet_one/pubspec.yaml
@@ -1,7 +1,9 @@
 name: ednet_one
 description: Semantic Web Client
 
-# Prevent accidental publishing to pub.dev.
+homepage: http/ednet.one
+
+  # Prevent accidental publishing to pub.dev.
 publish_to: 'none'
 
 version: 1.0.0+1
