--- a/packages/ednet_cms/pubspec.yaml
+++ b/packages/ednet_cms/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ednet_cms
 description: Semantic CMS tools
 version: 0.0.1
-homepage:
+homepage: https://github.com/ednet-dev/dev
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
