--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -57,3 +57,30 @@ workflows:
             # set manually again.
             exit 1
           fi
+
+  publish_cms:
+    name: PublishCMS
+    instance_type: mac_mini_m1
+    # Setting the timeout for a build to 15 minutes.
+    max_build_duration: 15
+    environment:
+      # Using the latest Flutter version.
+      flutter: stable
+      vars:
+        PUB_DEV_CREDENTIALS
+    scripts:
+      - name: Publish to pub.dev
+        script: |
+          echo $PUB_DEV_CREDENTIALS > "$FLUTTER_ROOT/.pub-cache/credentials.json"
+          flutter pub publish --dry-run
+          flutter pub publish -f
+    when:
+      changeset:
+        includes:
+          # Only run the CI when a file in one of the following directories
+          # changed.
+          - "packages/**"
+          - "codemagic.yaml"
+        excludes:
+          # Don't run the CI when only .md files changed.
+          - "**/*.md"
