--- a/packages/ednet_cms/pubspec.yaml
+++ b/packages/ednet_cms/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ednet_cms
 description: Semantic CMS tools
-version: 0.0.1
+version: 0.0.1+1
 homepage: https://github.com/ednet-dev/dev
 
 environment:
