--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -74,6 +74,10 @@ workflows:
           echo $PUB_DEV_CREDENTIALS > "$FLUTTER_ROOT/.pub-cache/credentials.json"
           flutter pub publish --dry-run
           flutter pub publish -f
+    # This workflow should trigger when a new pull request opens or updates.
+    triggering:
+      events:
+        - pull_request
     when:
       changeset:
         includes:
