CI/CD for pub.dev

--- a/melos.yaml
+++ b/melos.yaml
@@ -28,6 +28,10 @@ scripts:
     run: melos exec --dir-exists=test -- "flutter test"
     description: Run `flutter test` in all packages
 
+  coverage:
+    run: melos exec --dir-exists=test -- "flutter test --coverage"
+    description: Run `flutter test --coverage` in all packages
+
   publish_cms_to_pub_dry:
     run: melos exec --scope="ednet_cms" -- "dart pub publish --dry-run"
     description: Publish ednet_cms to pub.dev
