--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,11 @@
 workflows:
   ci:
     name: CI
+    cache:
+      cache_paths:
+        - "$HOME/Library/Caches/CocoaPods\t"
+        - "$HOME/.gradle/caches\t"
+        - "$FLUTTER_ROOT/.pub-cache\t"
     instance_type: mac_mini_m1
     # Setting the timeout for a build to 15 minutes.
     max_build_duration: 15
@@ -58,8 +63,15 @@ workflows:
             exit 1
           fi
 
+      - name: Run Coverage
+        script: melos run coverage
+
+
   publish_cms:
     name: PublishCMS
+    cache:
+      cache_paths:
+        - "$FLUTTER_ROOT/.pub-cache\t"
     instance_type: mac_mini_m1
     # Setting the timeout for a build to 15 minutes.
     max_build_duration: 15
@@ -70,12 +82,32 @@ workflows:
         - ednet_dev
 
     scripts:
+      - name: Add Dart SDK to PATH
+        script: |
+          echo PATH="$PATH":"$FLUTTER_ROOT/.pub-cache/bin" >> $CM_ENV
+          echo PATH="$PATH":"$FLUTTER_ROOT/bin" >> $CM_ENV
+
+      - name: Melos Bootstrap
+        script: |
+          dart pub global activate melos
+          melos bootstrap
+
+      - name: Run Analyze
+        script: melos run analyze
+
+      - name: Run Format
+        script: melos run format
+
+      - name: Run Tests
+        script: |
+          melos run test
+
       - name: Publish to pub.dev
         script: |
           echo $PUB_DEV_CREDENTIALS > "$FLUTTER_ROOT/.pub-cache/credentials.json"
-          cd packages/ednet_cms
-          flutter pub publish --dry-run
-          flutter pub publish -f
+          melos run publish publish_cms_to_pub_dry
+          melos run publish publish_cms_to_pub
+
     # This workflow should trigger when a new pull request opens or updates.
     triggering:
       events:
@@ -90,3 +122,4 @@ workflows:
         excludes:
           # Don't run the CI when only .md files changed.
           - "**/*.md"
+
