Debug CI stages - trigger EDNetOne CI only on main

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -25,6 +25,8 @@ workflows:
           - "**/*.md"
     # This workflow should trigger when a new pull request opens or updates.
     triggering:
+      branch_patterns:
+        - main
       events:
         - pull_request
     scripts:
