--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -26,9 +26,13 @@ workflows:
     # This workflow should trigger when a new pull request opens or updates.
     triggering:
       branch_patterns:
-          - main
+          - pattern: 'main'
+            include: true
+            source: false
       events:
         - pull_request
+
+      cancel_previous_builds: true
     scripts:
       - name: Add Dart SDK to PATH
         script: |
@@ -84,6 +88,13 @@ workflows:
     triggering:
       events:
         - pull_request
+      branch_patterns:
+          - pattern: 'main'
+            include: true
+            source: false
+
+      cancel_previous_builds: true
+
     when:
       changeset:
         includes:
