--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -127,10 +127,10 @@ workflows:
 
       - name: Publish to pub.dev
         script: |
-          echo $PUB_DEV_CREDENTIALS > "$FLUTTER_ROOT/.pub-cache/credentials.json"
+          echo $PUB_DEV_CREDENTIALS > "$FLUTTER_ROOT/.pub-cache/pub-credentials.json"
           melos run publish_cms_to_pub_dry
           echo "LOG after dry: $FLUTTER_ROOT/.pub-cache/credentials.json"
-          cat $FLUTTER_ROOT/.pub-cache/credentials.json
+          cat $FLUTTER_ROOT/.pub-cache/pub-credentials.json
           echo "XDG_CONFIG_HOME"
           echo $XDG_CONFIG_HOME
           echo "HOME"
@@ -140,9 +140,9 @@ workflows:
           echo "CM_ARTIFACT_LINKS"
           echo $CM_ARTIFACT_LINKS
           echo ".config:"
-          ls $HOME/.config/
-          echo ".config/pub:"
-          ls $HOME/.config/pub
-          echo ".config/dart:"
-          ls $HOME/.config/dart
+          ls $HOME/.config/flutter
+          mkdir -p $HOME/.config/dart
+          echo $PUB_DEV_CREDENTIALS > "$HOME/.config/dart/old-credentials.json"
+          echo "old-credentials.json:"
+          "$HOME/.config/dart/old-credentials.json"
           melos run publish_cms_to_pub
