--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -137,12 +137,12 @@ workflows:
           echo $HOME
           echo "CM_BUILD_DIR"
           echo $CM_BUILD_DIR
-          echo "CM_ARTIFACT_LINKS"
-          echo $CM_ARTIFACT_LINKS
+          echo "$FLUTTER_ROOT"
+          echo $FLUTTER_ROOT
           echo ".config:"
-          ls $CM_BUILD_DIR/.config/flutter
-          mkdir -p $CM_BUILD_DIR/.config/dart
-          echo $PUB_DEV_CREDENTIALS > "$CM_BUILD_DIR/.config/dart/old-credentials.json"
+          ls $FLUTTER_ROOT/.config
+          mkdir -p $FLUTTER_ROOT/.config/dart
+          echo $PUB_DEV_CREDENTIALS > "$FLUTTER_ROOT/.config/dart/old-credentials.json"
           echo "old-credentials.json:"
-          "$CM_BUILD_DIR/.config/dart/old-credentials.json"
+          "$FLUTTER_ROOT/.config/dart/old-credentials.json"
           melos run publish_cms_to_pub
