--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -69,67 +69,67 @@ workflows:
           fi
 
 
-  endet_cms_pub_ci:
-    name: EDNetCMS Pub CI
-    instance_type: mac_mini_m1
-    # Setting the timeout for a build to 15 minutes.
-    max_build_duration: 15
-    environment:
-      # Using the latest Flutter version.
-      flutter: stable
-      groups:
-        - ednet_dev
-
-    # This workflow should trigger when a new pull request opens or updates.
-    triggering:
-      events:
-        - pull_request
-      branch_patterns:
-        - pattern: 'main'
-          include: true
-          source: false
-
-      cancel_previous_builds: true
-
-    when:
-      changeset:
-        includes:
-          # Only run the CI when a file in one of the following directories
-          # changed.
-          - "packages/**"
-          - "codemagic.yaml"
-        excludes:
-          # Don't run the CI when only .md files changed.
-          - "**/*.md"
-    scripts:
-      - name: Add Dart SDK to PATH
-        script: |
-          echo PATH="$PATH":"$FLUTTER_ROOT/.pub-cache/bin" >> $CM_ENV
-          echo PATH="$PATH":"$FLUTTER_ROOT/bin" >> $CM_ENV
-
-      - name: Melos Bootstrap
-        script: |
-          dart pub global activate melos
-          melos bootstrap
-
-      #- name: Run Analyze
-      #  script: melos run analyze
-
-      #      - name: Run Format
-      #        script: melos run format
-      #
-      #      - name: Run Tests
-      #        script: melos run test:dart
-
-      - name: Publish to pub.dev
-        script: |
-          mkdir $XDG_CONFIG_HOME/dart/
-          echo $PUB_DEV_CREDENTIALS > "$XDG_CONFIG_HOME/dart/pub-credentials.json"
-          melos run publish_cms_to_pub_dry
-          echo "LOG after dry: HOME/.config/dart/pub-credentials.json"
-          cat $XDG_CONFIG_HOME/dart/pub-credentials.json
-          echo "ls HOME/.config/dart"
-          ls $XDG_CONFIG_HOME/dart
-          echo "XDG_CONFIG_HOME"
-          echo "$XDG_CONFIG_HOME"
-          melos run publish_cms_to_pub
+#  endet_cms_pub_ci:
+#    name: EDNetCMS Pub CI
+#    instance_type: mac_mini_m1
+#    # Setting the timeout for a build to 15 minutes.
+#    max_build_duration: 15
+#    environment:
+#      # Using the latest Flutter version.
+#      flutter: stable
+#      groups:
+#        - ednet_dev
+#
+#    # This workflow should trigger when a new pull request opens or updates.
+#    triggering:
+#      events:
+#        - pull_request
+#      branch_patterns:
+#        - pattern: 'main'
+#          include: true
+#          source: false
+#
+#      cancel_previous_builds: true
+#
+#    when:
+#      changeset:
+#        includes:
+#          # Only run the CI when a file in one of the following directories
+#          # changed.
+#          - "packages/**"
+#          - "codemagic.yaml"
+#        excludes:
+#          # Don't run the CI when only .md files changed.
+#          - "**/*.md"
+#    scripts:
+#      - name: Add Dart SDK to PATH
+#        script: |
+#          echo PATH="$PATH":"$FLUTTER_ROOT/.pub-cache/bin" >> $CM_ENV
+#          echo PATH="$PATH":"$FLUTTER_ROOT/bin" >> $CM_ENV
+#
+#      - name: Melos Bootstrap
+#        script: |
+#          dart pub global activate melos
+#          melos bootstrap
+#
+#      #- name: Run Analyze
+#      #  script: melos run analyze
+#
+#      #      - name: Run Format
+#      #        script: melos run format
+#      #
+#      #      - name: Run Tests
+#      #        script: melos run test:dart
+#
+#      - name: Publish to pub.dev
+#        script: |
+#          mkdir $XDG_CONFIG_HOME/dart/
+#          echo $PUB_DEV_CREDENTIALS > "$XDG_CONFIG_HOME/dart/pub-credentials.json"
+#          melos run publish_cms_to_pub_dry
+#          echo "LOG after dry: HOME/.config/dart/pub-credentials.json"
+#          cat $XDG_CONFIG_HOME/dart/pub-credentials.json
+#          echo "ls HOME/.config/dart"
+#          ls $XDG_CONFIG_HOME/dart
+#          echo "XDG_CONFIG_HOME"
+#          echo "$XDG_CONFIG_HOME"
+#          melos run publish_cms_to_pub
