--- a/packages/ednet_cms/pubspec.yaml
+++ b/packages/ednet_cms/pubspec.yaml
@@ -1,14 +1,16 @@
 name: ednet_cms
 description: Semantic CMS tools
 version: 0.0.1+2
-homepage: https://github.com/ednet-dev/dev
+homepage: https://github.com/ednet-dev/cms
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
+  ednet_core:
+    path: ../ednet_core
 
 dev_dependencies:
-  test: ^1.22.2
+  test: 1.22.0
   flutter_lints: ^2.0.1
 
