cms: bump core and gen to v0.0.1+4

--- a/packages/ednet_cms/pubspec.yaml
+++ b/packages/ednet_cms/pubspec.yaml
@@ -7,10 +7,8 @@ environment:
   sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
-#  ednet_code_generation: ^0.0.1+3
-  ednet_code_generation:
-    path: ../ednet_code_generation
-  ednet_core: ^0.0.1+2
+  ednet_code_generation: 0.0.1+4
+  ednet_core: ^0.0.1+4
   watcher: ^1.0.2
 
 dev_dependencies:
