--- a/packages/ednet_code_generation/pubspec.yaml
+++ b/packages/ednet_code_generation/pubspec.yaml
@@ -2,8 +2,8 @@ name: ednet_code_generation
 version: 0.0.1+4
 description: Generate a new EDNetCore project.
 
-homepage: https://github.com/ednet-dev/cms/packages/ednet_code_generation
-documentation: https://github.com/ednet-dev/cms/packages/ednet_code_generation
+homepage: https://github.com/ednet-dev/cms/tree/main/packages/ednet_code_generation
+documentation: https://github.com/ednet-dev/cms
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
