allow more than one code generation version

--- a/packages/ednet_cms/pubspec.yaml
+++ b/packages/ednet_cms/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
   sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
-  ednet_code_generation: 0.0.1+4
+  ednet_code_generation: ^0.0.1+4
   ednet_core: ^0.0.1+4
   watcher: ^1.0.2
 
