correct pubspec for dependency args: ^2.4.0

--- a/packages/ednet_cms/pubspec.yaml
+++ b/packages/ednet_cms/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   ednet_code_generation: ^0.0.1+4
   ednet_core: ^0.0.1+4
   watcher: ^1.0.2
+  args: ^2.4.0
 
 dev_dependencies:
   test: 1.22.0
