--- a/packages/ednet_code_generation/pubspec.yaml
+++ b/packages/ednet_code_generation/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ednet_code_generation
-version: 0.0.1+7
+version: 0.0.2
 description: Generate a new EDNetCore project.
 
 homepage: https://github.com/ednet-dev/cms/tree/main/packages/ednet_code_generation
@@ -9,7 +9,7 @@ environment:
   sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
-  ednet_core: ^0.0.1+7
+  ednet_core: ^0.0.1+8
   test: ^1.22.0
   yaml: ^3.1.1
 
