feat(ednet_cms): init CmsBuilder

--- a/packages/ednet_cms/pubspec.yaml
+++ b/packages/ednet_cms/pubspec.yaml
@@ -11,14 +11,13 @@ dependencies:
   ednet_core: ^0.0.1+8
   watcher: ^1.0.2
   args: ^2.4.0
+  build: ^2.3.1
 
 dev_dependencies:
   test: 1.22.0
   flutter_lints: ^2.0.1
+  build_runner: ^2.3.3
 
 # executables
-bin:
-  build:
-    script: bin/build_ednet_cms.dart
-    # Add any additional arguments here
-
+executables:
+  ednet_cms:
