perf(ednet_cms): generate only for content/*.yaml

--- a/packages/ednet_cms/build.yaml
+++ b/packages/ednet_cms/build.yaml
@@ -1,7 +1,9 @@
 targets:
   $default:
     builders:
-      ednet_cms:
+      ednet_cms|cmsBuilder:
+        generate_for:
+          - content/*.yaml
         enabled: true
       ednet_cms|contentWatcherBuilder:
         enabled: false
