--- a/packages/ednet_cms/pubspec.yaml
+++ b/packages/ednet_cms/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   watcher: ^1.0.2
   args: ^2.4.0
   build: ^2.3.1
+  glob: ^2.1.1
 
 dev_dependencies:
   test: 1.22.0
@@ -21,4 +22,9 @@ dev_dependencies:
   build_runner: ^2.3.3
   build_web_compilers: ^3.2.7
 
+executables:
+  build:
+    path: bin/build.dart
+  watch:
+    path: bin/watch.dart
 
