--- a/packages/ednet_code_generation/pubspec.yaml
+++ b/packages/ednet_code_generation/pubspec.yaml
@@ -9,8 +9,7 @@ environment:
   sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
-  ednet_core:
-    path: ../core
+  ednet_core: ^0.0.1+8
 
   test: ^1.22.0
   yaml: ^3.1.1
