--- a/packages/ednet_cms/pubspec.yaml
+++ b/packages/ednet_cms/pubspec.yaml
@@ -1,14 +1,14 @@
 name: ednet_cms
 description: Semantic CMS tools
-version: 0.0.3-dev.3
+version: 0.0.3-dev.4
 homepage: https://github.com/ednet-dev/cms/tree/main/packages/ednet_cms
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
-  ednet_code_generation: ^0.0.3+1
-  ednet_core: ^0.0.1+8
+  ednet_code_generation: ^0.0.4
+  ednet_core: ^0.0.1+9
   watcher: ^1.0.2
   args: ^2.4.0
   build: ^2.3.1
