--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -1,11 +1,10 @@
 name: ednet_core
 description: Set of cool generic tools in modeling domain models based on domain-driven design and event storming
-version: 0.0.1+9
+version: 0.0.1+10
 homepage: https://github.com/ednet-dev/cms/tree/main/packages/core
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   test: ^1.22.0
-
