--- a/packages/ednet_cms/pubspec.yaml
+++ b/packages/ednet_cms/pubspec.yaml
@@ -4,11 +4,13 @@ version: 0.0.3-dev.5
 homepage: https://github.com/ednet-dev/cms/tree/main/packages/ednet_cms
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  ednet_code_generation: ^0.0.5
-  ednet_core: ^0.0.1+11
+  ednet_code_generation:
+    path: ../ednet_code_generation
+  ednet_core:
+    path: ../core
   watcher: ^1.0.2
   args: ^2.4.0
   build: ^2.3.1
@@ -24,4 +26,3 @@ dev_dependencies:
 executables:
   build:
   watch:
-
