--- a/apps/ednet_one/pubspec.yaml
+++ b/apps/ednet_one/pubspec.yaml
@@ -1,15 +1,16 @@
 name: ednet_one
 description: Semantic Web Client
 
-homepage: http/context.one
+homepage:
+  http/context.one
 
   # Prevent accidental publishing to pub.dev.
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ">=2.18.6 <3.0.0"
 
 dependencies:
   flutter:
@@ -17,7 +18,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  ednet_core: ^0.0.1+11
+  ednet_core: ^0.0.1+10
 dev_dependencies:
   flutter_test:
     sdk: flutter
